--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,19 @@
     <string name="find_course">Find your favorite course</string>
     <string name="text">Get to your destination faster, study at the best vocational school in Brazil. Be the best version of yourself.</string>
     <string name="get_started">Get Started</string>
-    <string name="find_course_outlined">Find your course here</string>
+    <string name="find_course_outlined">Find your course</string>
+    <string name="find_student_outlined">Find a student</string>
     <string name="courses">Courses</string>
+    <string name="ds">DS</string>
+    <string name="todos">Todos</string>
+    <string name="cursando">Cursando</string>
+    <string name="finalizado">Finalizado</string>
+    <string name="students_list">Students List</string>
+    <string name="nome_aluno">Luana Oliveira Dias</string>
+    <string name="course_description">001 - Técnico em Desenvolvimento de Sistemas</string>
+    <string name="desenvolvimento_de_sistemas">Desenvolvimento de Sistemas</string>
+    <string name="ds_skils">Learn to develop web and mobile applications.</string>
+    <string name="tres_semestres">3 semestres</string>
+    <string name="desempenho">Desempenho</string>
+    <string name="matricula_aluno">20151001018</string>
 </resources>
